# omni-translate

./: .env.example  .gitignore  .prettierignore  DEVELOPMENT.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
locales/: en.json  meta.json  zh-CN.json
scripts/: cargo-env.sh  fetch-sherpa-sidecar.sh
scripts/i18n/: sync.mjs  validate.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/resources/models/: sherpa-manifest.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/assets/: mod.rs  model_manager.rs
src-tauri/src/audio/: buffer.rs  capture.rs  devices.rs  integrated_feeder.rs  mod.rs  pipeline.rs  session.rs  types.rs
src-tauri/src/commands/: audio.rs  logging.rs  mod.rs  models.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/logging/: macros.rs  mod.rs
src-tauri/src/platform/: audio.rs  mod.rs
src-tauri/src/providers/: mod.rs  types.rs
src-tauri/src/providers/asr/: aliyun.rs  mod.rs  tencent.rs  whisper.rs
src-tauri/src/providers/asr/sherpa/: config.rs  mod.rs  sidecar.rs
src-tauri/src/providers/speech_translate/: mod.rs  tencent_languages.rs  tencent_ws.rs
src-tauri/src/providers/translation/: deepl_free.rs  llm.rs  mod.rs  traditional.rs
src/app/: ThemeSync.tsx  WindowRoot.test.tsx  WindowRoot.tsx
src/components/: ProviderSelect.tsx
src/components/ui/: badge.tsx  banner.tsx  button.tsx  form-row.tsx  input.tsx  progress-bar.tsx  segmented-control.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  window-shell.tsx
src/i18n/: index.ts  types.ts
src/lib/: audio.ts  invoke-error.ts  logging.ts  preferences-navigation.ts  tauri.ts  windows.ts
src/lib/audio/: constants.ts  pipeline-types.ts  session.ts  types.ts
src/lib/models/: sherpa.ts  useSherpaModelDownloads.ts
src/lib/settings/: asr-cloud-credentials.ts  index.ts  provider-registry.ts  speech-translate.ts  storage.ts  types.ts  (+1 more)
src/styles/: controls.css  global.css  tokens.css
src/test/: setup.ts
src/theme/: index.ts
(+26 files in other folders)
