[package]
name = "omnitranslate"
version = "0.1.0"
description = "OmniTranslate — real-time subtitle translation for macOS and Windows"
authors = ["OmniTranslate"]
edition = "2021"

[lib]
name = "omnitranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
thiserror = "2"
block2 = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
whisper-rs = { version = "0.13", optional = true }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
bzip2 = "0.5"
tar = "0.4"

[features]
default = []
whisper = ["dep:whisper-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", features = ["block2"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
